--- a/src/components/Intro/styles.scss
+++ b/src/components/Intro/styles.scss
@@ -4,7 +4,12 @@
   justify-content: center;
   align-items: center;
   .name {
+    @media screen and (max-width: 600px) {
+      font-size: 3rem;
+    }
+    @media screen and (min-width: 600px) {
+      font-size: 5rem;
+    }
     font-family: "Quintessential", cursive;
-    font-size: 5rem;
   }
 }
